experimental/parser/testdata/parser/syntax/edition_invalid.proto.stderr.txt
error: unrecognized `edition` declaration value
  --> testdata/parser/syntax/edition_invalid.proto:15:11
   |
15 | edition = "invalid";
   |           ^^^^^^^^^
   = note: treating the file as Edition 2023 instead
   = help: permitted values: "2023", "2024"

encountered 1 error
